--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Api's desarrolladas en Node y express con conexion a MongoDB",
   "main": "index.js",
   "scripts": {
+    "cargaBD": "node ./bin/installBD",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +20,14 @@
   },
   "homepage": "https://github.com/cayulla/nodeApi#readme",
   "dependencies": {
+    "async": "^1.4.2",
+    "co": "^4.6.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "hash.js": "^1.1.5",
+    "i18n": "^0.8.3",
+    "mongoose": "^5.2.5",
+    "underscore": "^1.9.1",
+    "validator": "^4.0.6"
   }
 }
