--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hash.js": "^1.1.5",
     "i18n": "^0.8.3",
     "mongoose": "^5.2.5",
+    "mysql": "^2.16.0",
     "underscore": "^1.9.1",
     "validator": "^4.0.6"
   }
